frontend service works

--- a/docker-compose.webapp.yml
+++ b/docker-compose.webapp.yml
@@ -8,4 +8,6 @@ services:
         stdin_open: true
         tty: true
         working_dir: /frontend
+        ports:
+            - "8888:8888"
         command: bash
