--- a/webapp/frontend/package.json
+++ b/webapp/frontend/package.json
@@ -1,30 +1,29 @@
 {
-    "name": "melanoma-classifier",
-    "version": "1.0.0",
-    "main": "src/index.ts",
-    "scripts": {
-        "start": "webpack-dev-server",
-	"webpack": "webpack"
-    },
-    "license": "MIT",
-    "devDependencies": {
-        "@types/html-webpack-template": "^6.0.3",
-        "@types/node": "^10.5.1",
-        "@types/webpack": "^4.4.4",
-        "awesome-typescript-loader": "^5.2.0",
-        "html-webpack-plugin": "^3.2.0",
-        "html-webpack-template": "^6.2.0",
-        "source-map-loader": "^0.2.3",
-        "ts-node": "^7.0.0",
-        "typescript": "^2.9.2",
-        "webpack": "^4.14.0",
-        "webpack-cli": "^3.0.8",
-        "webpack-dev-server": "^3.1.4"
-    },
-    "dependencies": {
-        "@types/react": "^16.4.6",
-        "@types/react-dom": "^16.0.6",
-        "react": "^16.4.1",
-        "react-dom": "^16.4.1"
-    }
+   "name": "melanoma-classifier",
+   "version": "1.0.0",
+   "main": "index.js",
+   "license": "MIT",
+   "scripts": {
+      "start": "webpack-dev-server"
+   },
+   "devDependencies": {
+      "@types/html-webpack-plugin": "^2.30.3",
+      "@types/node": "^10.5.1",
+      "@types/react": "^16.4.6",
+      "@types/react-dom": "^16.0.6",
+      "@types/webpack": "^4.4.4",
+      "awesome-typescript-loader": "^5.2.0",
+      "html-webpack-plugin": "^3.2.0",
+      "source-map-loader": "^0.2.3",
+      "ts-node": "^7.0.0",
+      "typescript": "^2.9.2",
+      "webpack": "^4.14.0",
+      "webpack-cli": "^3.0.8",
+      "webpack-dev-server": "^3.1.4"
+   },
+   "dependencies": {
+      "@tensorflow/tfjs": "^0.11.7",
+      "react": "^16.4.1",
+      "react-dom": "^16.4.1"
+   }
 }
