--- a/webapp/frontend/package.json
+++ b/webapp/frontend/package.json
@@ -1,36 +1,37 @@
 {
-    "name": "melanoma-classifier",
-    "version": "1.0.0",
-    "main": "index.js",
-    "license": "MIT",
-    "scripts": {
-	"start": "webpack-dev-server"
-    },
-    "devDependencies": {
-	"@types/html-webpack-plugin": "^2.30.3",
-	"@types/html-webpack-template": "^6.0.3",
-	"@types/node": "^10.5.1",
-	"@types/react": "^16.4.6",
-	"@types/react-beautiful-dnd": "^7.1.0",
-	"@types/react-dom": "^16.0.6",
-	"@types/webpack": "^4.4.4",
-	"awesome-typescript-loader": "^5.2.0",
-	"source-map-loader": "^0.2.3",
-	"ts-node": "^7.0.0",
-	"tslint": "^5.10.0",
-	"tslint-config-airbnb": "^5.9.2",
-	"typescript": "^2.9.2",
-	"webpack-cli": "^3.0.8",
-	"webpack-dev-server": "^3.1.4"
-    },
-    "dependencies": {
-	"@material-ui/core": "^1.3.1",
-	"@tensorflow/tfjs": "^0.11.7",
-	"react": "^16.4.1",
-	"react-beautiful-dnd": "^8.0.0",
-	"react-dom": "^16.4.1",
-	"webpack": "^4.14.0",
-	"html-webpack-plugin": "^3.2.0",
-	"html-webpack-template": "^6.2.0"
-    }
+			"name": "melanoma-classifier",
+			"version": "1.0.0",
+			"main": "index.js",
+			"license": "MIT",
+			"scripts": {
+						"start": "webpack-dev-server"
+			},
+			"devDependencies": {
+						"@types/html-webpack-plugin": "^2.30.3",
+						"@types/html-webpack-template": "^6.0.3",
+						"@types/node": "^10.5.1",
+						"@types/react": "^16.4.6",
+						"@types/react-beautiful-dnd": "^7.1.0",
+						"@types/react-dom": "^16.0.6",
+						"@types/webpack": "^4.4.4",
+						"awesome-typescript-loader": "^5.2.0",
+						"source-map-loader": "^0.2.3",
+						"ts-node": "^7.0.0",
+						"tslint": "^5.10.0",
+						"tslint-config-airbnb": "^5.9.2",
+						"typescript": "^2.9.2",
+						"webpack-cli": "^3.0.8",
+						"webpack-dev-server": "^3.1.4"
+			},
+			"dependencies": {
+						"@material-ui/core": "^1.3.1",
+						"@material-ui/icons": "^1.1.0",
+						"@tensorflow/tfjs": "^0.11.7",
+						"html-webpack-plugin": "^3.2.0",
+						"html-webpack-template": "^6.2.0",
+						"react": "^16.4.1",
+						"react-beautiful-dnd": "^8.0.0",
+						"react-dom": "^16.4.1",
+						"webpack": "^4.14.0"
+			}
 }
