move docker compose files into relevant directories

--- a/data-downloader/docker-compose.yml
+++ b/data-downloader/docker-compose.yml
@@ -3,6 +3,6 @@ services:
     data-downloader:
         image: adamkowalski/python
         volumes:
-            - ./data/:/data/
-            - ./data-downloader/:/data-downloader/
+            - ../data/:/data/
+            - ./:/data-downloader/
         command: bash /data-downloader/data-downloader.sh
