--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -83,7 +83,20 @@ services:
         networks:
             - webapp
         runtime: nvidia
-        command: model_renamer.py
+        command: python model_renamer.py
+
+    demo:
+        image: adamkowalski/python
+        volumes:
+            - ./demo/:/demo/
+            - ../.emacs.d/:/root/.emacs.d/
+        stdin_open: true
+        tty: true
+        working_dir: /demo
+        networks:
+            - webapp
+        runtime: nvidia
+        command: bash
 
 
 networks:
