--- a/webapp/frontend/package.json
+++ b/webapp/frontend/package.json
@@ -13,6 +13,7 @@
 						"@types/react": "^16.4.6",
 						"@types/react-beautiful-dnd": "^7.1.0",
 						"@types/react-dom": "^16.0.6",
+						"@types/socket.io": "^1.4.36",
 						"@types/webpack": "^4.4.4",
 						"awesome-typescript-loader": "^5.2.0",
 						"source-map-loader": "^0.2.3",
@@ -37,6 +38,7 @@
 						"react-hot-loader": "^4.3.3",
 						"socket.io": "^2.1.1",
 						"socket.io-client": "^2.1.1",
-						"webpack": "^4.14.0"
+						"webpack": "^4.14.0",
+						"ws": "^5.2.2"
 			}
 }
