--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -1,3 +1,7 @@
+# Copyright (c) 2018 Adam Kowalski
+# This code is available under the "Apache License 2.0"
+# Please see the file COPYING in this distribution for license terms.
+
 version: '2.3'
 services:
     frontend:
@@ -45,6 +49,8 @@ services:
         environment:
             - PYTHONPATH=/library/:$PYTHONPATH
         runtime: nvidia
+        stdin_open: true
+        tty: true
         command: python model_runner.py
 
     model-loader:
